tdf#121012 Display "Ctrl-click to follow hyperlink" inside shapes/texfields

Change-Id: I8def50f0de20098ebbfd2b0934825a297e1d24d0